[gd_scene format=3 uid="uid://c5xcm4um4f1t1"]

[ext_resource type="Script" uid="uid://b14l60tg8niyb" path="res://Assets/Scripts/UI/LevelSelectionUI.gd" id="1_mn6i2"]

[sub_resource type="LabelSettings" id="LabelSettings_58oa2"]
font_size = 40

[node name="LevelSelectionMenu" type="Control" unique_id=237425963]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mn6i2")

[node name="Panel" type="Panel" parent="." unique_id=1155472711]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel" unique_id=1133555322]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.5
offset_top = 100.0
offset_right = 107.5
offset_bottom = 142.0
grow_horizontal = 2
text = "Выбор уровня"
label_settings = SubResource("LabelSettings_58oa2")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" unique_id=1262589973]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Level1Button" type="Button" parent="Panel/HBoxContainer" unique_id=555188614]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Level2Button" type="Button" parent="Panel/HBoxContainer" unique_id=1840039956]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "2"

[node name="Level3Button" type="Button" parent="Panel/HBoxContainer" unique_id=2086111341]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
disabled = true
text = "3"

[node name="Level4Button" type="Button" parent="Panel/HBoxContainer" unique_id=774237479]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
disabled = true
text = "4"

[node name="Level5Button" type="Button" parent="Panel/HBoxContainer" unique_id=1534122721]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
disabled = true
text = "5"

[node name="TestLevelButton" type="Button" parent="Panel" unique_id=1420169804]
custom_minimum_size = Vector2(100, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 500.0
offset_right = 175.0
offset_bottom = 550.0
grow_horizontal = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Тестовый уровень"

[node name="BackToMenuButton" type="Button" parent="Panel" unique_id=794306215]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 630.0
offset_right = 125.0
offset_bottom = 690.0
grow_horizontal = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Назад в меню"

[connection signal="pressed" from="Panel/HBoxContainer/Level1Button" to="." method="_on_level_button_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/Level2Button" to="." method="_on_level_button_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/Level3Button" to="." method="_on_level_button_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/Level4Button" to="." method="_on_level_button_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/Level5Button" to="." method="_on_level_button_pressed" flags=18]
[connection signal="pressed" from="Panel/TestLevelButton" to="." method="_on_test_level_button_pressed"]
[connection signal="pressed" from="Panel/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
